--- a/style.css
+++ b/style.css
@@ -37,6 +37,11 @@ body {
     width: 200px;
     text-align: center;
   }
+
+  .book h2 {
+    font-size: 20px;
+    padding-top: 15px;
+  }
   
   footer {
     text-align: center;
@@ -44,3 +49,33 @@ body {
     font-size: 1.5rem;
   }
   
+  .col {
+    height: 400px;
+    width: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .genre-container {
+    height: 410px;
+    width: 1200px;
+    padding: 2px;
+    margin: 12px auto;
+    overflow: scroll;
+    border: 3px solid grey;
+    display: flex;
+  }
+
+  .genre-container h3 {
+    display: flex;
+    height: 70px;
+    width: 400px;
+    transform: rotate(270deg); /* Rotates the text 90 degrees */
+    align-self: center;
+    white-space: nowrap;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 2px solid grey;
+    font-size: 50px;
+  }
