--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 }
 
 header {
+  background-color: olive !important;
   text-align: center;
   padding: 10px;
 }
@@ -45,6 +46,7 @@ footer {
   background-color: white;
   border-radius: 8px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  border: none !important;
   padding: 15px;
   width: 200px;
   flex: 0 0 auto; /* horizontal scroll */
